# startingover

./: .gitignore  CMakeLists.txt  component.json  prebuild  readme.md  startingover
.lib/glm/: .bower.json  CMakeLists.txt  component.json  readme.md
.lib/glm/include/: glm.h
.lib/glm/include/cglm/: types.h
.lib/glm/src/: glm.c  glm.vapi
docs/: index.data  index.html  index.js  index.wasm
example/: demo.cpp  entities.h  game.cpp  main.cpp  shmupwarz.html
include/: ball_object.h  game.h  game_level.h  game_object.h  particle_generator.h  post_processor.h  resource_manager.h  shader.h  sprite_renderer.h  texture.h
lib/: libSOIL.bc
shaders/: post_processing.frag  post_processing.vs
src/: ball_object.cpp  components.h  entities.cpp  entities.h  game.1.cpp  game.cpp  game.h  game_level.cpp  game_object.cpp  main.cpp  particle_generator.cpp  post_processor.cpp  program.cpp  resource_manager.cpp  shader.cpp  sprite_renderer.cpp  startingover.c  systems.cpp  systems.h  texture.cpp
src.1/: demo1.cpp  systems.h
src.2/: components.h  demo3.cpp  index.html  main.cpp
www/: index.data  index.js  index.wasm
